updating .env file

--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
+#Copy this to file called .env and provide your own API Key for API_APP_ID
+
 #OpenWeatherMap API Defaults
-API_ENDPOINT='api.openweathermap.org'
-API_APP_ID='your key here'
+API_ENDPOINT='http://api.openweathermap.org/data/2.5/weather'
+API_APP_ID='<your key here>'
 API_LANG='en'
 
 #argparse options
