--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
-python:
-  - "3.7"
+python: "3.7"
 virtualenv:
   system_site_packages: true
 install:
   - pip install -r requirements.txt
   - pip install .
-script: travis_test.sh
+script: pytest weather_grabber.py
